Test/Reconstruction/Arith/ArithMulSign.expected
Test/Reconstruction/Arith/ArithMulSign.lean:1:0: error: object file './.lake/build/lib/Smt/Reconstruct/Arith.olean' of module Smt.Reconstruct.Arith does not exist
Test/Reconstruction/Arith/ArithMulSign.lean:3:5: error: unknown namespace 'Smt.Reconstruct.Arith'
Test/Reconstruction/Arith/ArithMulSign.lean:5:22: error: unexpected token '+'; expected ')', ',' or ':'
Test/Reconstruction/Arith/ArithMulSign.lean:8:22: error: expected token
Test/Reconstruction/Arith/ArithMulSign.lean:11:22: error: expected token
Test/Reconstruction/Arith/ArithMulSign.lean:15:4: error: expected token
Test/Reconstruction/Arith/ArithMulSign.lean:23:30: error: expected token
Test/Reconstruction/Arith/ArithMulSign.lean:27:4: error: expected token
